# AISAMPLE

嵌入式_代码/arm_ws/devel/: .catkin  .rosinstall  local_setup.sh
嵌入式_代码/arm_ws/devel/include/mycobot_communication/: GetAnglesRequest.h  GetAnglesResponse.h  GetCoordsRequest.h  GetCoordsResponse.h  GripperStatusRequest.h  GripperStatusResponse.h  MycobotAngles.h  MycobotCoords.h  MycobotGripperStatus.h  MycobotPumpStatus.h  MycobotSetAngles.h  MycobotSetCoords.h  PumpStatusRequest.h  PumpStatusResponse.h  SetAnglesRequest.h  SetAnglesResponse.h  SetCoordsRequest.h  SetCoordsResponse.h
嵌入式_代码/arm_ws/devel/lib/gluon/: gluon_node
嵌入式_代码/arm_ws/devel/lib/gluon_control/: gluon_control_node
嵌入式_代码/arm_ws/devel/lib/gluon_planning/: add_collision_objct_node  check_collision_node  remove_collision_objct_node  test_cartesian_path_node  test_custom_node  test_random_node
嵌入式_代码/arm_ws/src/gluon_2l6_4l3/: CMakeLists.txt  urdf.rviz
嵌入式_代码/carto_ws/devel/: .catkin  local_setup.sh  setup.sh
嵌入式_代码/carto_ws/map/: 2d-1.pbstream  2d-1.pgm  2d-1.yaml
嵌入式_代码/catkin_ws/: room.txt
嵌入式_代码/catkin_ws/msc/0dec518552fbd363060e65dda7096e99/: u.data
嵌入式_代码/catkin_ws/src/auto_start/: CMakeLists.txt
嵌入式_代码/catkin_ws/src/face_detect/: CMakeLists.txt  package.xml
嵌入式_代码/catkin_ws/src/face_detect/src/: CMakeLists.txt  detectors.cpp  visualizer.cpp
嵌入式_代码/catkin_ws/src/main_control/: CMakeLists.txt
嵌入式_代码/catkin_ws/src/simple_follower/: CMakeLists.txt
嵌入式_代码/catkin_ws/src/turn_on_wheeltec_robot/: CMakeLists.txt
嵌入式_代码/catkin_ws/src/xf_mic_asr_offline/: CMakeLists.txt
(+266 files in other folders)
